--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/tailwind.config.js
+/yarn.lock
+/craco.config.js
+/package.json
+/package-lock.json
