--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run build",
+    "build": "npm install",
     "install": "npm install",
     "start":"node index.js"
   },
