--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-typed": "^1.2.0",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
