--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,17 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+
+    - name: Use Node.js 14
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+
+    - name: 🔨 Build Project
+      run: |
+        npm install
+        npm run build
 
     - name: Deploy to OVH
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
