--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "formik": "^2.2.9",
     "nodemailer": "^6.9.3",
     "react": "^17.0.2",
+    "react-console-emulator": "^5.0.2",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
+    "react-konami-code": "^2.3.0",
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
