--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "nodemailer": "^6.9.3",
     "react-typed": "^1.2.0"
   }
