--- a/obfuscatorConfig.json
+++ b/obfuscatorConfig.json
@@ -4,8 +4,7 @@
   "controlFlowFlatteningThreshold": 0.75,
   "deadCodeInjection": true,
   "deadCodeInjectionThreshold": 0.4,
-  "debugProtection": true,
-  "debugProtectionInterval": true,
+  "debugProtectionInterval": 0,
   "disableConsoleOutput": true,
   "identifierNamesGenerator": "hexadecimal",
   "log": false,
