add firestore db, and connexion

--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,9 @@
-REACT_APP_SERVICE_ID_EMAILJS= YOUR SERVICE ID EMAILJS
+REACT_APP_SERVICE_ID_EMAILJS=YOUR SERVICE ID EMAILJS
 REACT_APP_TEMPLATE_ID_EMAILJS=YOUR TEMPLATE ID EMAILJS
 REACT_APP_USER_ID_EMAIL_JS=YOUR USER ID EMAILJS
+REACT_APP_API_KEY=YOUR FIRESTORE API KEY
+REACT_APP_AUTH_DOMAIN=YOUR FIRESTORE AUTH DOMAIN
+REACT_APP_PROJECT_ID=YOUR FIRESTORE PROJECT ID
+REACT_APP_STORAGE_BUCKET=YOUR FIRESTORE STORAGE BUCKET
+REACT_APP_MESSAGING_SENDER_ID=YOUR FIRESTORE MESSAGING SENDER ID
+REACT_APP_APP_ID=YOUR FIRESTORE APP ID
