--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.4.0",
     "formik": "^2.2.9",
     "nodemailer": "^6.9.3",
     "react": "^17.0.2",
