add modal detail for project, need to finish

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,21 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#4e2822",
+    "activityBar.activeBackground": "#3399ff",
     "activityBar.activeBorder": "#a82b15",
-    "activityBar.background": "#a82b15",
+    "activityBar.background": "#3399ff",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
     "activityBarBadge.background": "#bf0060",
     "activityBarBadge.foreground": "#e7e7e7",
     "sash.hoverBorder": "#3399ff",
-    "statusBar.background": "#a82b15",
+    "statusBar.background": "#007fff",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#a82b15",
-    "statusBarItem.remoteBackground": "#a82b15",
+    "statusBarItem.hoverBackground": "#3399ff",
+    "statusBarItem.remoteBackground": "#007fff",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#a82b15",
+    "titleBar.activeBackground": "#007fff",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#a82b15",
+    "titleBar.inactiveBackground": "#007fff99",
     "titleBar.inactiveForeground": "#e7e7e799",
     "commandCenter.border": "#e7e7e799"
   },
